--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -190,6 +190,7 @@ select:-webkit-autofill {
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  cursor: pointer;
 }
 .image-square {
   width: 40px;
