初始化引入

--- a/src/uni.scss
+++ b/src/uni.scss
@@ -17,6 +17,7 @@
 
 /* 行为相关颜色 */
 $uni-color-primary: #007aff;
+$uni-color-main: #5098FF;
 $uni-color-success: #4cd964;
 $uni-color-warning: #f0ad4e;
 $uni-color-error: #dd524d;
