--- a/assets/css/markdown.css
+++ b/assets/css/markdown.css
@@ -145,8 +145,8 @@
 .markdown-body code,
 .markdown-body kbd,
 .markdown-body pre {
-  font-family: monospace, monospace;
-  font-size: 1em;
+  font-family: Menlo,Monaco,Consolas,Courier New,monospace;
+  font-size: 12px;
 }
 .markdown-body hr {
   box-sizing: content-box;
@@ -498,7 +498,7 @@
   padding-top: 0.2em;
   padding-bottom: 0.2em;
   margin: 0;
-  font-size: 85%;
+  font-size: 12px;
   border-radius: 3px;
 }
 .markdown-body code::after,
@@ -526,7 +526,6 @@
 }
 .markdown-body .highlight pre,
 .markdown-body pre {
-  padding: 16px;
   overflow: auto;
   font-size: 85%;
   line-height: 1.45;
@@ -535,10 +534,9 @@
 }
 .markdown-body pre code {
   display: block;
-  max-width: auto;
-  padding: 0;
+  padding: 2px 6px;
   margin: 0;
-  overflow: visible;
+  overflow: auto;
   line-height: inherit;
   word-wrap: normal;
   border: 0;
@@ -569,6 +567,9 @@
   position: relative;
   z-index: 1;
   border-color: #0366d6;
+}
+ol, ul, li{
+  list-style: disc;
 }
 .markdown-body .task-list-item {
   list-style-type: none;
